# webman

./: Cargo.toml  build.sh
app/: Cargo.toml
app/src/: app.rs  config.rs  config_db.rs  config_structs.rs  lib.rs  ssh_config.rs
crud/: Cargo.toml
crud/src/mysql/: mod.rs
crud/src/sqlite/: mod.rs
db/: Cargo.toml
db/src/: entities.rs  generate_models.rs  lib.rs  tables.rs
migrations/: 20260612210407_create_nodes_table.sql
prelude/: Cargo.toml
prelude/src/: lib.rs
src/: code.rs  common.rs  devserver.rs  lib.rs  main.rs  nodes.rs  remote.rs  roots.rs  servers.rs  ssh.rs
src/beta/: clone.rs  mod.rs
src/config/: mod.rs  virtual_host.rs
src/db/: generate_models.rs  mod.rs
src/db/migrate/: mod.rs  run.rs
src/node/: add.rs  edit.rs  mod.rs  root.rs  setup.rs
src/push/: config.rs  mod.rs  pbk.rs
src/random/: characters.rs  digits.rs  hex.rs  mod.rs
src/ssh_config/: generate.rs  mod.rs  update.rs
util/: Cargo.toml
util/src/: lib.rs
utils/: Cargo.toml
utils/src/: cmd.rs  lib.rs  ssh.rs  substrings.rs
