[package]
name = "webman"
version = "2.0.0"
edition = "2021"

[workspace]

members = [
    ".",
    "prelude",
    "db",
    "crud",
    "util",
    "app"
]


[workspace.dependencies]
clap = { version = "4.0.32", features = ["derive"] }
tokio = { version = "1.28.0", features = ["full"] }
eyre = "0.6.8"
cli-table = "0.4"
serde_json = { version = "1.0", features = ["preserve_order"]}
serde = { version = "1.0", features = ["derive"] }
json = "*"
indexmap = {version = "1.9.1", features = ["serde-1"]}
colored = "2.0.0"
ssh_cfg = { git = "https://github.com/akintomiwaopemipo/ssh_cfg" }
rpassword = "7.3.1"
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "sqlite" ] }
chrono = { version = "0.4", features = ["serde"] }
sea-query = { version = "0.30.1",  features = ["with-chrono"]}
sea-query-binder = { version = "0.5.0", features = ["sqlx-mysql", "sqlx-sqlite", "with-chrono"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
convert_case = "0.11.0"
enum-iterator = "1.4.1"
strum = { version = "0.25", features = ["derive"] }
utoipa = { version = "5.4.0", features = ["indexmap", "preserve_order", "preserve_path_order", "chrono"] }
regex = "1.8.4"
rand = "0.7"
whoami = "1.4.0"
fs_extra = "1.2.0"
russh = "0.61.2"
russh-sftp = "2.3.0"



[dependencies]
prelude = { path = "./prelude" }
app = { path = "./app" }
db = { path = "./db" }
crud = { path = "./crud" }
util = { path = "./util" }
utils ={ path = "./utils" }
clap = { workspace = true }
tokio = { workspace = true }
eyre = { workspace = true }
sqlx = { workspace = true }
cli-table = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
json = { workspace = true }
indexmap = { workspace = true }
colored = { workspace = true }
ssh_cfg = { workspace = true }
rpassword = { workspace = true }