[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prelude = { path = "../prelude" }
util = { path = "../util" }
utils = { path = "../utils" }
db = { path = "../db" }
crud = { path = "../crud" }
eyre = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
indexmap = { workspace = true }
whoami = { workspace = true }
fs_extra = { workspace = true }
russh = { workspace = true }