[package]
name = "db"
version = "0.1.0"
authors = ["Akintomiwa Opemipo <ibnakintomiwa@gmail.com>"]
edition = "2024"

[dependencies]
prelude = { path = "../prelude" }
utils = { path = "../utils" }
serde = { workspace = true }
serde_json = { workspace = true }
indexmap = { workspace = true }
chrono = { workspace = true }
sea-query = { workspace = true }
sea-query-binder = { workspace = true }
sqlx = { workspace = true }
eyre = { workspace = true }
tracing = { workspace = true }
strum = { workspace = true }
enum-iterator = { workspace = true }
utoipa = { workspace = true }
convert_case = { workspace = true }